2017.9/_sources/plugins/available/longitudinal/linear-mixed-effects.txt
linear-mixed-effects: Linear mixed effects modeling
===================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal linear-mixed-effects [OPTIONS]

     Linear mixed effects models evaluate the contribution of exogenous
     covariates "group_categories" to a single dependent variable, "metric".
     Perform LME and plot line plots of each group column. A feature table
     artifact is required input, though whether "metric" is derived from the
     feature table or metadata is optional.

   Options:
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
                                     Sample metadata containing group_column,
                                     state_column, individual_id_column, and
                                     optionally metric values.
     --p-group-categories TEXT       [required]
                                     Comma-separated list (without
                                     spaces) of metadata categories to use as
                                     independent covariates used to determine
                                     mean structure of "metric".
     --p-metric TEXT                 [required]
                                     Dependent variable column name.
                                     Must be a column name located in the
                                     metadata or feature table files.
     --p-state-column TEXT           [required]
                                     Metadata column containing state
                                     (e.g., Time) across which samples are
                                     paired.
     --p-individual-id-column TEXT   [required]
                                     Metadata column containing IDs
                                     for individual subjects.
     --i-table PATH                  Artifact: FeatureTable[RelativeFrequency]
                                     [optional]
                                     Feature table to optionally use
                                     for paired comparisons.
     --p-palette [Pastel2|tab10|Dark2|tab20|tab20c|Accent|viridis|plasma|terrain|inferno|magma|Pastel1|Set2|Paired|tab20b|rainbow|Set3|Set1]
                                     [default: Set1]
                                     Color palette to use for
                                     generating boxplots.
     --p-lowess / --p-no-lowess      [default: False]
                                     Estimate locally weighted
                                     scatterplot smoothing. Note that this will
                                     eliminate confidence interval plotting.
     --p-ci FLOAT                    [default: 95]
                                     Size of the confidence
                                     interval for the regression estimate.
     --o-visualization PATH          Visualization [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Linear mixed effects modeling

   Linear mixed effects models evaluate the contribution of exogenous
   covariates "group_categories" to a single dependent variable, "metric".
   Perform LME and plot line plots of each group column. A feature table
   artifact is required input, though whether "metric" is derived from the
   feature table or metadata is optional.

   Parameters
   ----------
   table : FeatureTable[RelativeFrequency], optional
       Feature table to optionally use for paired comparisons.
   metadata : Metadata
       Sample metadata containing group_column,  state_column,
       individual_id_column, and optionally metric values.
   group_categories : Str
       Comma-separated list (without spaces) of metadata categories to use as
       independent covariates used to determine mean structure of "metric".
   metric : Str
       Dependent variable column name. Must be a column name located in the
       metadata or feature table files.
   state_column : Str
       Metadata column containing state (e.g., Time) across which samples are
       paired.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   palette : Str % Choices({'Accent', 'Dark2', 'Paired', 'Pastel1', 'Pastel2', 'Set1', 'Set2', 'Set3', 'inferno', 'magma', 'plasma', 'rainbow', 'tab10', 'tab20', 'tab20b', 'tab20c', 'terrain', 'viridis'}), optional
       Color palette to use for generating boxplots.
   lowess : Bool, optional
       Estimate locally weighted scatterplot smoothing. Note that this will
       eliminate confidence interval plotting.
   ci : Float % Range(0, 100), optional
       Size of the confidence interval for the regression estimate.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>